[project]
name = "argo-backend"
requires-python = ">=3.11,<3.13"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-html = "^4.1.1"
pytest-cov = "^5.0.0"
bandit = "^1.7.10"
ruff = "~0.9.2"
mypy = "~1.13.0"
pre-commit = "^2.21.0"
coverage = "^7.2.7"
coverage-badge = "^1.1.0"
pyinstaller = "6.11.1"
sqlalchemy = "2.0.36"

[tool.poetry.dependencies]
alembic = "1.14.0"
beautifulsoup4 = "4.12.3"
bcrypt = "4.2.1"
cachetools = "5.5.0"
cryptography = "44.0.0"
docx2txt = "0.8"
huggingface-hub = "0.27.0"
langchain = "0.3.21"
langchain-community = "0.3.20"
langchain-core = "0.3.47"
langgraph = "0.4.8"
langgraph-checkpoint = "2.1.0"
langgraph-prebuilt = "0.2.2"
langchain-openai = "0.3.9"
langchain-text-splitters = "0.3.7"
langchain-anthropic = "0.3.10"
langchain-deepseek = "0.1.3"
langchain-mcp-adapters = "0.1.0"
langchain-ollama = "0.3.0"
openpyxl= "3.1.5"
numpy = "1.26.3"
pybind11 = "2.13.6"
pydantic = "2.10.6"
pyjwt = "2.10.1"
python-pptx = "1.0.2"
pytz = "2024.2"
pyyaml = "6.0.2"
requests = "2.32.3"
sentencepiece = "0.2.0"
sqlalchemy = "2.0.36"
tiktoken = "0.8.0"
tornado = "6.4.2"
tqdm = "4.67.1"
duckduckgo-search = "7.1.0"
bs4 = "0.0.2"
jinja2 = "3.1.3"
pymupdf = "1.25.1"
semver = "3.0.2"
qdrant-client = "1.12.1"
cchardet = "2.2.0-alpha.2"
anthropic = "0.49.0"
openai = "1.68.2"
tinydb = "4.8.2"
python-dotenv = "1.0.1"
edge-tts = "7.0.0"
emoji = "2.14.0"
xlrd = "1.2.0"
json-repair = "0.41.1"
blinker = "1.9.0"
python-dateutil = "2.9.0.post0"
ollama = "0.4.8"
httpx = "0.28.1"
swagger-ui-py = "23.9.23"
apispec = "6.8.2"
apispec-webframeworks = "1.2.0"
psutil = "7.0.0"
soupsieve = "2.6"
tokenizers = "0.21.1"
markdownify = "1.1.0"
readabilipy = "0.3.0"
langchain-experimental = "0.3.4"
ua-generator = "^2.0.9"
